# ai-post-writter

./: .env.example  .gitignore  config.py  debug_llm.py  main.py  pyproject.toml  setup.sh
src/: import_post.py  models.py  utils.py
src/service/: import_post.py  setting_model.py  write_post.py
